# grid-position-research

./: .gitignore  devosfera.mplstyle  grid_position_model.py  pyproject.toml
.devcontainer/: devcontainer.json
app/: model-dashboard.py
data/: circuit-type.csv  grid-position-download.py  grid-position-explore.py  insert-circuit-types.py
exploration/: circuit-info.r  grid-position-exploration.r  pymc-grid-position.ipynb
model/: basic-grid-pos.jags  basic-grid-pos.r  basic.py  era.py  ordinal-grid-pos.jags  ordinal-grid-pos.r  ordinal-logistic-grid-pos-breakdown.md  ordinal-logistic-grid-pos-samples.rds  ordinal-logistic-grid-pos.jags  ordinal-logistic-grid-pos.r  ordinal-r-output.r  pymc_grid_model.py  run.py  shared.py  street.py
reports/: grid-position-importance-pymc.qmd  grid-position-importance.qmd  results-to-db.py
