[project]
name = "grid-position"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arviz<1.0.0",
    "fastf1>=3.7.0",
    "graphviz>=0.21",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pymc>=5.28.0",
    "quarto>=0.1.0",
]

[dependency-groups]
dev = [
    "jupyter-client>=8.7.0",
    "pynvim>=0.6.0",
]
