[project]
name = "grid-position"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
  "arviz<1.0.0",
  "fastf1>=3.7.0",
  "graphviz>=0.21",
  "ipykernel>=7.2.0",
  "matplotlib>=3.10.8",
  "numpy>=2.3.5",
  "pandas>=2.3.3",
  "plotly>=6.0.0",
  "psycopg2-binary>=2.9.12",
  "pymc>=5.28.0,<6.0.0",
  "quarto>=0.1.0",
  "sqlalchemy>=2.0.51",
  "streamlit>=1.59.2",
]

[dependency-groups]
dev = ["jupyter-client>=8.7.0", "pynvim>=0.6.0"]

[tool.poetry]
package-mode = false
